--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "torch>=1.13.0",
     "sentence-transformers>=2.2.2",
     "transformers>=4.29.2",
-    "openai>=0.27.7",
     "rank-bm25>=0.2.2",
     "spacy>=3.5.3",
     "pysqlite-binary>=0.5.0",
@@ -23,7 +22,7 @@ dependencies = [
 Repository = "https://github.com/lflage/OpenFActScore"
 
 [build-system]
-requires = ["setuptools", "setuptools-scm", "wheel"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
