--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "transformers>=4.29.2",
     "rank-bm25>=0.2.2",
     "spacy>=3.5.3",
-    "pysqlite-binary>=0.5.0",
+    "pysqlite3>=0.5.0",
     "nltk>=3.8.1"
 ]
 
