--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,15 @@ authors = [
 license = { text = "MIT" }
 readme = "README.md"
 dependencies = [
-    "torch>=1.13.0",
+    "python">=3.9,
+    "torch>=2.7",
     "sentence-transformers>=2.2.2",
-    "transformers>=4.29.2",
+    "transformers>=4.50",
     "rank-bm25>=0.2.2",
     "spacy>=3.5.3",
-    "pysqlite3>=0.5.0",
-    "nltk>=3.8.1"
+    "pysqlite-binary>=0.5.0",
+    "nltk>=3.8.1",
+    "bitsandbytes>=0.46.0
 ]
 
 [project.urls]
