--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 license = { text = "MIT" }
 readme = "README.md"
 dependencies = [
-    "python">=3.9,
+    "python>=3.9",
     "torch>=2.7",
     "sentence-transformers>=2.2.2",
     "transformers>=4.50",
@@ -16,7 +16,7 @@ dependencies = [
     "spacy>=3.5.3",
     "pysqlite-binary>=0.5.0",
     "nltk>=3.8.1",
-    "bitsandbytes>=0.46.0
+    "bitsandbytes>=0.46.0"
 ]
 
 [project.urls]
